[package]
name = "libp2p-multilang"
version = "0.1.0"
authors = ["fluencelabs"]
edition = "2018"

[dependencies]
futures = "0.1"
libp2p = { path = "./rust-libp2p"}
libp2p-core = { path = "./rust-libp2p/core"}
libp2p-ping = { path = "./rust-libp2p/protocols/ping"}
libp2p-identify = { path = "./rust-libp2p/protocols/identify"}
libp2p-swarm = { path = "./rust-libp2p/swarm"}
libp2p-gossipsub = { path = "./rust-libp2p/protocols/gossipsub"}

void = "1.0.2"
names = "0.11"
tokio = "0.1"
tokio-stdin-stdout = "0.1"

env_logger = "0.7.1"

base64 = "0.11.0"
bs58 = "0.3.0"